--- a/app/ml_app/base/static/css/ml.css
+++ b/app/ml_app/base/static/css/ml.css
@@ -11,7 +11,7 @@
   height: 100vh;
   display:flex;
   flex-direction: column;
-  justify-content: space-between
+  justify-content: space-between;
 }
 .content{
   width: 100%;
@@ -100,5 +100,13 @@
   display:flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly
+  justify-content: space-evenly;
+  padding: 20px;
+}
+.cover{
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
